--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@ Throwing Jargon ask for simplicity, explain what happens into
 Help Developers understand the goals and requirements , no just product
 Create or find artifacts (Videos & visuals ) for reference.</b></p>
 
-<img "responsive" src="Users/chidinmakalu/Dev%20/Codeinaday/Giraffe.jpg"
+<img "responsive" src="images/Giraffe.jpg"
  alt ="Giraffes">
 <ol>
   <li> We have tigers </li>
